--- a/packages/kahi-ui-framework/src/framework/navigation/menu/framework.scss
+++ b/packages/kahi-ui-framework/src/framework/navigation/menu/framework.scss
@@ -151,7 +151,7 @@ $menu-heading-hover: ":hover";
 
         padding: var(--menu-padding);
 
-        border: var(--menu-border) vhsl(--menu-border-color);
+        border: var(--menu-border);
         border-radius: var(--menu-radius);
     }
 
